fix(events_list): fix no disaster short state content alignment

--- a/src/features/events_list/components/EventsPanel/EventsPanel.module.css
+++ b/src/features/events_list/components/EventsPanel/EventsPanel.module.css
@@ -44,7 +44,7 @@
   flex: 1;
 
   &.show > .contentWrap {
-    display: flex;
+    display: none;
     height: 100%;
     padding-bottom: var(--unit);
   }
